# soma-lang

./: .gitignore  BENCHMARK.md  LICENSE  Makefile  README.md  SOMA.grammar  build.sh  cleanup_repo.sh  cli.py  examples.soma  push_to_github.sh  pyproject.toml  soma.stdlib  soma_cli  soma_emit_c.py  soma_runtime.py  somasc.soma  verify_congruency.py
.github/workflows/: ci.yml
assembler/: somasc.soma
bootstrap/: bootstrap_assembler.py
docs/: RATIONALE.md  index.html
examples/: hello_agent.c  hello_agent.soma  online_learner.soma  phase_v_emergence.py  soma_curious.soma  soma_life.soma  swarm_benchmark.c  swarm_cluster.soma
runtime/: bridge.py  cli.py  collective.py  interpreter_patch.py  soma_bridge.c  soma_emit_c.py  soma_runtime.c  soma_runtime.h  soma_runtime.py
runtime/agent/: __init__.py  agent_registry.py  lifecycle.py  thread_agent.py
runtime/som/: __init__.py  emotion.py  memory.py  som_map.py  som_scheduler.py  som_visualizer.py  soul.py  terrain.py
soma/: assembler.py  cdbg.py  cli.py  isa.py  lexer.py  vm.py
spec/: SOMA.grammar
stdlib/: soma.stdlib
tests/: test_agent.py  test_bridge.py  test_collective.py  test_curiosity_cdbg.py  test_liveliness.py  test_phase26.py  test_som.py  test_soma.py
