[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-lang"
version = "3.0.0"
description = "SOMA — Self-Organizing Multi-Agent Binary Language"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "sbhadade"}]
keywords = ["soma", "language", "binary", "multi-agent", "som", "assembler", "vm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
dev  = ["pytest>=7", "black", "ruff"]

[project.scripts]
soma = "runtime.cli:main"   # ← this is the magic line

[project.urls]
Homepage   = "https://github.com/sbhadade/soma-lang"
Repository = "https://github.com/sbhadade/soma-lang"
Issues     = "https://github.com/sbhadade/soma-lang/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "bootstrap*"]

[tool.setuptools.package-data]
"*" = ["*.soma", "*.spec", "*.grammar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100