[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-lang"
version = "3.0.0"
description = "SOMA — Self-Organizing Multi-Agent Binary Language"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "sbhadade"}]
keywords = ["soma", "language", "binary", "multi-agent", "som", "assembler", "vm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
dev  = ["pytest>=7", "black", "ruff"]

[project.scripts]
soma = "runtime.cli:main"   # ← this is the magic line

[project.urls]
Homepage   = "https://github.com/sbhadade/soma-lang"
Repository = "https://github.com/sbhadade/soma-lang"
Issues     = "https://github.com/sbhadade/soma-lang/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "bootstrap*"]

[tool.setuptools.package-data]
"*" = ["*.soma", "*.spec", "*.grammar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E701",  # multiple statements on one line (colon) — style used throughout
    "E702",  # multiple statements on one line (semicolon) — style used throughout  
    "E501",  # line too long — codebase uses long lines intentionally
    "E401",  # multiple imports on one line — used in bootstrap
    "F841",  # local variable assigned but never used — acceptable
    "E741",  # ambiguous variable name — acceptable
    "E722",  # bare except — acceptable
    "E402",  # module level import not at top — intentional in lexer
]
